[package]
name = "redox-ssh"
version = "0.1.0"
authors = ["Thomas Gatzweiler <mail@thomasgatzweiler.com>"]

[lib]
name = "ssh"
path = "src/lib.rs"

[[bin]]
name = "ssh"
path = "src/bin/ssh.rs"

[[bin]]
name = "sshd"
path = "src/bin/sshd.rs"

[dependencies]
byteorder = "^1.0"
log = "^0.3"
nom = "^3.1"
ring = "^0.11.0"

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.1"

